Fix RecommendationController.java compilation errors